<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/req_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/post_top_answered"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/qTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/qTitleDemo"
            android:gravity="start"
            android:textStyle="bold"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:layout_weight="2"
            android:textSize="18sp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/titleColor"
            android:background="@drawable/post_top_answered"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/req_header"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:background="@color/postBG">

            <TextView
                android:id="@+id/qBody"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/req_header"
                android:gravity="start"
                android:text="@string/qBodyDemo"
                android:layout_margin="10dp"
                android:paddingRight="40dp"
                android:textSize="15sp"
                android:maxLines="2"
                android:ellipsize="end"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:background="@color/postBG">

        <LinearLayout
            android:id="@+id/ll2a"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/postBG">

            <TextView
                android:id="@+id/num_votes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:autoText="false"
                android:gravity="center"
                android:paddingRight="20dp"

                android:text="@string/votes_demo"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2b"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/postBG">

            <TextView
                android:id="@+id/num_ans"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/answerDemo"
                android:layout_margin="10dp"
                android:paddingRight="20dp"
                android:layout_weight="1"
                android:textSize="20sp"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/postBG"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tags"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingRight="5dp"
                android:paddingLeft="10dp"
                android:text="@string/tagsDemo"
                android:maxLines="3"
                android:ellipsize="end"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:baselineAligned="true"
            android:background="@drawable/user_details">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@mipmap/search_button"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="2dp"
                    android:text="@string/usernameDemo"
                    android:textAlignment="textStart"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/user_reputation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reputationDemo"
                    android:textAlignment="textStart"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/ll3"
        android:background="#77606060" />

    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:background="@color/postBG">

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="@color/colorAccent"
                android:text="@string/viewDemo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/dateCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creationDemo"
                android:layout_gravity="end"
                android:gravity="end"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>




